# servicenowpy

./: .example.env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
docker/: mock-api.Dockerfile  servicenowpy.Dockerfile
docs/: conf.py  index.rst
docs/api/: client.rst  table.rst
docs/user/: examples.rst  install.rst
mock_api/: mock_api.py
servicenowpy/: .example.env  pyproject.toml
servicenowpy/servicenowpy/: __init__.py  exceptions.py  servicenow.py
servicenowpy/tests/: test_exceptions.py  test_mock_api.py  test_servicenow.py
src/mock_api/: mock_api.py  mock_data.json
src/servicenowpy/: exceptions.py  servicenow.py
src/tests/: mock_data.json  mocks.py  test_mock_api.py  test_mock_server.py  test_real_server.py  test_servicenow.py
