[metadata]
name = servicenowpy
author = Henrique Santos
author_email = henriquencmt@gmail.com
version = attr: servicenowpy.__version__
description = ServiceNow Table API, easily
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Operating System :: OS Independent
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
project_urls =
  Bug Tracker = https://github.com/henriquencmt/servicenowpy/issues
  Source Code = https://github.com/henriquencmt/servicenowpy
  Documentation = https://servicenowpy.readthedocs.io
keywords = servicenow

[options]
package_dir=
  =servicenowpy
packages=find:
include_package_data = True
install_requires =
  requests>=2.22.0
python_requires = >=3.8

[options.packages.find]
where=servicenowpy
include=servicenowpy
exclude=tests


